--- a/src/resources/Sass/_elements.scss
+++ b/src/resources/Sass/_elements.scss
@@ -48,19 +48,31 @@
         // color: $con;
         // color: $converse-color;
         font-weight: bold;
+        color: $converse-color;
         animation: hovering $basic-transition-duration linear;
       }
+      // box-area:hover{
+      //   color:$secondary-color;
+      // }
       //   text-align: center;
     }
   }
   a,
   #cz,
   #en {
-    display: flex;
-    flex-grow: 1;
+    // display:;
+    position: absolute;
+    left: 2rem;
+    
+    // overflow-x: ;
+
+    // margin-top: 2rem;
+    // flex-grow: 1;
+    // background-color: blue;
     // margin-top: -3rem;
-    align-items: center;
-    padding: 0.4rem;
+    // align-items: center;
+    // padding: 0.4rem;
+    // margin-top: 3rem;
     // background-color: blue;
     color: $heading-color;
     // margin: auto;
@@ -72,32 +84,46 @@
     &:link {
       color: $heading-color;
     }
-    &:hover {
-      color: $converse-color;
-    }
+    // &:hover {
+    //   color: $converse-color;
+    // }
   }
 }
 #cz,
 #en {
   // margin: auto;
   font-weight: 700;
-  margin-right: 1rem;
-  align-items: center;
-  margin-left: 2rem;
-  justify-content: center;
+  z-index: 1;
+  position: absolute;
+
+  // margin-right: 1rem;
+  // align-items: center;
+  // margin-left: 2rem;
+  // justify-content: center;
+  // margin: 0;
+  top: 6rem;
+  right: 3rem;
+  background-color: $heading-color;
+  // border: 1px solid red;
+  padding: 1.1rem 1.5rem 0.9rem 1.5rem;
+  text-align: center;
+  border-radius: 3rem;
+  // top: 40px;
+// padding: 0;
+    // background-color: blue;
   //   border: 0.2rem solid $converse-color;
   // border-radius: 2rem;
-  &:hover {
-    transition-duration: $basic-transition-duration;
-    padding-left: 1rem;
-    font-weight: bold;
-    // margin: none;
-    // margin-right: -5rem;
-    border-color: $heading-color;
-    text-align: center;
-    border-radius: 2rem;
-    // animation: fadein $basic-transition-duration forwards;
-  }
+//   &:hover {
+//     transition-duration: $basic-transition-duration;
+//     padding-left: 1rem;
+//     font-weight: bold;
+//     // margin: none;
+//     // margin-right: -5rem;
+//     border-color: $heading-color;
+//     text-align: center;
+//     border-radius: 2rem;
+//     // animation: fadein $basic-transition-duration forwards;
+//   }
 }
 .basic-ul {
   // background-color: black;
@@ -128,8 +154,9 @@ ol {
 .footer {
   // margin-top: $margin-sections;
   padding: $basic-text-margin 0 $basic-text-margin $basic-text-margin;
+  margin-top: $basic-text-margin;
   background-color: $footer-background-color;
-  min-height: 20vh;
+  min-height: 15vh;
   color: $primary-color;
   // text-align: center;
   .sideway {
