--- a/src/resources/Sass/_images.scss
+++ b/src/resources/Sass/_images.scss
@@ -4,9 +4,10 @@
   &-large {
     display: flex;
     justify-content: center;
-    min-width: 80vw;
+    // min-width: 80vw;
     min-width: 30vh;
-    margin: auto;
+    max-height: 40vh;
+    // margin: auto;
   }
 }
 .logo {
@@ -15,8 +16,10 @@
   // color: $primary-color;
   // background-color: $primary-color;
   &-large {
-    margin: $logo-margin;
-    width: 70vw;
+    // margin: $logo-margin;
+    width: 60vw;
+    padding-top: 4vw;
+    z-index: 0;
   }
   @media (max-width: $long-phone) {
     & {
