--- a/src/resources/Sass/_pages.scss
+++ b/src/resources/Sass/_pages.scss
@@ -2,9 +2,38 @@
   // border: 1px solid red;
   padding: 0 3vw;
   // margin-top: $margin-sections;
-  background-color: $primary-color;
+  // background-color: $primary-color;
   min-height: 90vh;
   margin: 0 $basic-text-margin;
+  &-image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 40vw;
+    margin: auto;
+img{
+  max-width: 50vw;
+  display: flex;
+  align-items: center;
+
+}
+  }
+  &-images{
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    max-width: 80vw;
+    img{
+
+      max-width: 40vw;
+
+    }
+  }
+  .divider{
+    width: 100vw;
+    // height: 1rem;
+  }
   .content {
     //   margin:$basic-text-margin;
     padding: $basic-text-margin 0;
@@ -13,7 +42,7 @@
     }
     h1 {
       text-align: center;
-      color: $heading-color;
+      color: $heading-text-color;
       //   background-color: $converse-color;
       margin-bottom: $heading-margin;
       //   border-bottom: 0.5rem $converse-color solid;
@@ -35,21 +64,24 @@
     padding: $basic-text-margin 0;
     .text {
       line-height: 1.4;
-      font-size: 1.5rem;
+      font-size: 1.6rem;
       font-weight: 500;
-      color: $primary-color;
+      color: $basic-text-color;
       a {
-        color: $primary-color;
+        color: $secondary-color;
         font-weight: bold;
         &:hover {
           color: $converse-color;
         }
       }
-
+.strong{
+  display:contents;
+  font-weight: bold;
+}
       h2 {
         padding-top: 2rem;
         font-size: 3rem;
-        color: $heading-color;
+        color: $heading-text-color;
       }
       h2,
       .left {
@@ -65,7 +97,44 @@
           border-bottom: 0.5rem $converse-color solid;
         }
       }
+.conference-table{
+  display: table;
+width: 100%;
+border: none;
+margin: 60px 0 40px 0;
+font-size: 0.9em;
+border-collapse: collapse;
+table-layout: fixed;
+text-align: center;
+.upper{
+  background-color: $converse-color;
+  border-left: 2px solid $primary-color;
+}
+& th{
+font-size: large;
+height: 5rem;
+}
+& tr{
+  // margin-top: 2rem;
+  // padding: 2rem;
 
+  // border: solid 1px;
+  border-bottom: 1px solid white;
+}
+.first{
+  border: none;
+  height: 5.5rem;
+}
+
+& td{
+  margin: 2rem;
+border-left: solid 1px ;
+}
+@media (max-width:$medium-phone){
+  display: none;
+  // content: "";
+}
+}
       .bullet {
         padding: 2rem 0 2rem 2rem;
       }
@@ -74,12 +143,15 @@
       }
       .centered {
         text-align: center;
+
+      word-spacing: 10%;
+      letter-spacing: 0.2rem;
       }
     }
   }
   @media (max-width: $longest-phone) {
-    padding: 0 3vh;
-    margin: 0 1rem;
+    // padding: 0 vh;
+    margin: 0 1rem 8rem 0;
   }
 }
 .page .center {
