--- a/src/resources/Sass/_root.scss
+++ b/src/resources/Sass/_root.scss
@@ -23,7 +23,8 @@ body {
   padding: 0;
   font-family: $text-font-basic;
   font-size: 2rem;
-  background-color: $primary-color;
+  background-color: $body-color;
+  // color:$secondary-color;
   a {
     text-decoration: none;
     &:visited {
@@ -36,5 +37,7 @@ body {
       color: $converse-color;
       transition-duration: $basic-transition-duration;
     } // color: $white;
+
   }
+  
 }
