--- a/src/resources/Sass/_images.scss
+++ b/src/resources/Sass/_images.scss
@@ -43,3 +43,14 @@
     fill: black;
   }
 }
+.icon{
+
+  &::after{
+    background-color: aqua;
+    display: block;
+    // margin: 20rem;
+    // margin: auto;
+content:"";
+    // content:"ahooj";
+  }
+}
