--- a/src/resources/Sass/_variables.scss
+++ b/src/resources/Sass/_variables.scss
@@ -29,6 +29,7 @@ $heading-text-color:#fff;
 $logo-margin: 3rem;
 $margin-sections: 6rem;
 $heading-margin: 3rem;
+$basic-image-margin:3rem;
 // IMAGES RESOLUTIONS
 $large-image-size: 25rem;
 $medium-image-size: 15rem;
