--- a/src/Css/main.css
+++ b/src/Css/main.css
@@ -85,6 +85,17 @@ body a:hover {
   content: "";
 }
 
+.footer-icon {
+  color: #ffffff;
+  font-size: large;
+  font-size: 3.9rem;
+  margin-bottom: 0.2rem;
+  animation-duration: 0.3s;
+}
+.footer-icon :hover {
+  color: #e6412e;
+}
+
 .header {
   display: flex;
   background-color: #ffffff;
@@ -177,7 +188,7 @@ ol li {
 
 .footer {
   padding: 3rem 0 3rem 3rem;
-  margin-top: 3rem;
+  margin-top: 6rem;
   background-color: #14191d;
   min-height: 15vh;
   color: #59666f;
@@ -199,6 +210,31 @@ ol li {
 }
 .footer .end-content a :hover {
   color: #59666f;
+}
+
+.center {
+  text-align: center;
+}
+.center h2 {
+  font-size: 3.8rem;
+  color: #ffffff;
+}
+.center .contacts {
+  color: #79838b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.center .contacts .contact {
+  flex-grow: 100;
+  margin-top: 3rem;
+  display: block;
+}
+.center .contacts .contact .address {
+  flex-grow: 1;
+  display: block;
+  margin: auto;
+  font-weight: bold;
 }
 
 /**
@@ -340,6 +376,7 @@ ol li {
 .page .content .text .strong {
   display: contents;
   font-weight: bold;
+  font-size: 1.7rem;
 }
 .page .content .text h2 {
   padding-top: 2rem;
@@ -409,6 +446,28 @@ ol li {
   min-height: 100vh;
   padding: 0 10vh;
   background-color: #ffffff;
+}
+
+.link-away {
+  margin-top: 3rem;
+}
+
+.only-on-mobile {
+  display: none;
+}
+@media (max-width: 712px) {
+  .only-on-mobile {
+    display: block;
+  }
+}
+
+.centered {
+  padding-top: 2rem;
+  text-align: center;
+}
+.centered .textos {
+  padding: 0;
+  margin: 0;
 }
 
 .box-link:hover {
