--- a/src/resources/Sass/_pages.scss
+++ b/src/resources/Sass/_pages.scss
@@ -55,6 +55,12 @@
     width: 100vw;
     // height: 1rem;
   }
+  .flex-center{
+    display:flex;
+    align-items:center ;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
   .content {
     //   margin:$basic-text-margin;
     padding: $basic-text-margin 0;
